Sun Nov 06 22:05:09 GMT 2011  Olly Betts <olly@survex.com>

	* generate-exceptions: Document all parameters to fix doxygen
	  warnings.

Sun Nov 06 22:03:50 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/: Fix doxygen warnings.

Sun Nov 06 21:00:08 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Document value parameter of
	  sortable_serialise() and sortable_unserialise().

Sun Nov 06 17:53:31 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/document.h: Improve Document get_data() and set_data()
	  documentation comments.

Sun Nov 06 17:14:39 GMT 2011  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Add -I$(top_srcdir) so api/replication.h is found
	  in a VPATH build.

Sun Nov 06 16:06:52 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/database.h,backends/document.h,
	  backends/multi/multi_alltermslist.h,backends/positionlist.h,common/,
	  tests/harness/: More more headers out of common.

Sun Nov 06 14:55:25 GMT 2011  Olly Betts <olly@survex.com>

	* api/maptermlist.h,backends/inmemory/Makefile.mk,
	  backends/inmemory/inmemory_positionlist.h,
	  backends/remote/Makefile.mk,backends/remote/remote-database.cc,
	  backends/remote/remote-database.h,common/Makefile.mk,
	  common/inmemory_positionlist.h,common/remote-database.h,
	  matcher/multimatch.cc,matcher/remotesubmatch.cc,
	  matcher/remotesubmatch.h,net/progclient.h,net/remotetcpclient.h:
	  Move two more headers out of common.

Sun Nov 06 11:56:46 GMT 2011  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Fix for VPATH build.

Sun Nov 06 11:26:18 GMT 2011  Olly Betts <olly@survex.com>

	* common/,tests/api_replicate.cc: Factor internal classes out of
	  output.h into new output-internal.h to fix build failures in VPATH
	  due to move of weightinternal.h out of common (since the test harness
	  uses output.h).

Sun Nov 06 00:49:45 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,backends/dbfactory_remote.cc,