@@ -1,7 +1,7 @@
 /** @file expanddecider.h
  * @brief Allow rejection of terms during ESet generation.
  */
-/* Copyright (C) 2007 Olly Betts
+/* Copyright (C) 2007,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -31,7 +31,10 @@ namespace Xapian {
 /** Virtual base class for expand decider functor. */
 class XAPIAN_VISIBILITY_DEFAULT ExpandDecider {
   public:
-    /** Do we want this term in the ESet? */
+    /** Do we want this term in the ESet?
+     *
+     *  @param term	The term to test.
+     */
     virtual bool operator()(const std::string &term) const = 0;
 
     /** Virtual destructor, because we have virtual methods. */
@@ -49,12 +52,19 @@ class XAPIAN_VISIBILITY_DEFAULT ExpandDeciderAnd : public ExpandDecider {
   public:
     /** Terms will be checked with @a first, and if accepted, then checked
      *  with @a second.
+     *
+     *  @param first_	First ExpandDecider object to test with.
+     *  @param second_	ExpandDecider object to test with if first_ accepts.
      */
     ExpandDeciderAnd(const ExpandDecider &first_,
 		     const ExpandDecider &second_)
 	: first(first_), second(second_) { }
 
-    /** Compatibility method. */
+    /** Compatibility method.
+     *
+     *  @param first_	First ExpandDecider object to test with.
+     *  @param second_	ExpandDecider object to test with if first_ accepts.
+     */
     ExpandDeciderAnd(const ExpandDecider *first_,
 		     const ExpandDecider *second_)
 	: first(*first_), second(*second_) { }
@@ -73,8 +83,11 @@ class XAPIAN_VISIBILITY_DEFAULT ExpandDeciderFilterTerms : public ExpandDecider 
   public:
     /** The two iterators specify a list of terms to be rejected.
      *
-     *  @a reject_begin and @a reject_end can be any input_iterator type
-     *  which returns std::string or char * (e.g. TermIterator or char **).
+     *  @param reject_begin	Begin iterator for the list of terms to
+     *				reject.  It can be any input_iterator type
+     *				which returns std::string or char * (e.g.
+     *				TermIterator or char **).
+     *  @param reject_end	End iterator for the list of terms to reject.
      */
     template <class Iterator>
     ExpandDeciderFilterTerms(Iterator reject_begin, Iterator reject_end)
