@@ -96,8 +96,9 @@ class XAPIAN_VISIBILITY_DEFAULT TermIterator {
      *  If the iteration is over an unsorted list of terms, then this method
      *  will throw Xapian::InvalidOperationError.
      *
-     *  If the specified term isn't in the stream being iterated, then
-     *  the iterator is moved to the next term after @a term.
+     *  @param term	The term to advance to.  If this term isn't in
+     *			the stream being iterated, then the iterator is moved
+     *			to the next term after it which is.
      */
     void skip_to(const std::string &term);
 
